feat: ajustar texto de botones

--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <div class="container">
         <h1>Botonera</h1>
         <div class="button-grid">
-            <button class="btn" data-sound="1">Botón 1</button>
-            <button class="btn" data-sound="2">Botón 2</button>
-            <button class="btn" data-sound="3">Botón 3</button>
-            <button class="btn" data-sound="4">Botón 4</button>
-            <button class="btn" data-sound="5">Botón 5</button>
-            <button class="btn" data-sound="6">Botón 6</button>
-            <button class="btn" data-sound="7">Botón 7</button>
-            <button class="btn" data-sound="8">Botón 8</button>
-            <button class="btn" data-sound="9">Botón 9</button>
-            <button class="btn" data-sound="10">Botón 10</button>
+            <button class="btn" data-sound="1"> rapadora</button>
+            <button class="btn" data-sound="2">pavo real</button>
+            <button class="btn" data-sound="3">fantasma</button>
+            <button class="btn" data-sound="4">banduria</button>
+            <button class="btn" data-sound="5">ornero</button>
+            <button class="btn" data-sound="6">ronquidos</button>
+            <button class="btn" data-sound="7">minions</button>
+            <button class="btn" data-sound="8">Mario Bros</button>
+            <button class="btn" data-sound="9">No se tira asi</button>
+            <button class="btn" data-sound="10">ese gustito</button>
         </div>
     </div>
     <script src="script.js"></script>
