feat:agregar primer sonido

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <button class="btn" data-sound="4">banduria</button>
             <button class="btn" data-sound="5">ornero</button>
             <button class="btn" data-sound="6">ronquidos</button>
-            <button class="btn" data-sound="7">minions</button>
+            <button class="btn" data-sound="./sonidos/pedo.mp4">pedo</button>
             <button class="btn" data-sound="8">Mario Bros</button>
             <button class="btn" data-sound="9">No se tira asi</button>
             <button class="btn" data-sound="10">ese gustito</button>
