agregar mas sonidos

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
     <div class="container">
         <h1>Botonera</h1>
         <div class="button-grid">
-            <button class="btn" data-sound="1"> rapadora</button>
-            <button class="btn" data-sound="2">pavo real</button>
-            <button class="btn" data-sound="3">fantasma</button>
+            <button class="btn" data-sound="./sonidos/rapadora.mp4"> rapadora</button>
+            <button class="btn" data-sound="./sonidos/pavo.mp4">pavo real</button>
+            <button class="btn" data-sound="./sonidos/rayo.mp4">Rayo McQueen</button>
             <button class="btn" data-sound="4">banduria</button>
             <button class="btn" data-sound="5">ornero</button>
-            <button class="btn" data-sound="6">ronquidos</button>
+            <button class="btn" data-sound="./sonidos/mimir.mp4">ronquidos</button>
             <button class="btn" data-sound="./sonidos/pedo.mp4">pedo</button>
-            <button class="btn" data-sound="8">Mario Bros</button>
+            <button class="btn" data-sound="./sonidos/its_mario.mp4">Mario Bros</button>
             <button class="btn" data-sound="9">No se tira asi</button>
             <button class="btn" data-sound="10">ese gustito</button>
         </div>
