--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <div class="container">
         <h1>Botonera</h1>
         <div class="button-grid">
-            <button class="btn" data-sound="./sonidos/rapadora.mp4"> rapadora</button>
+            <button class="btn" data-sound="./sonidos/rapadora.mp4">rapadora</button>
             <button class="btn" data-sound="./sonidos/pavo.mp4">pavo real</button>
             <button class="btn" data-sound="./sonidos/rayo.mp4">Rayo McQueen</button>
-            <button class="btn" data-sound="4">banduria</button>
-            <button class="btn" data-sound="5">ornero</button>
+            <button class="btn" data-sound="4">bandurria</button>
+            <button class="btn" data-sound="5">hornero</button>
             <button class="btn" data-sound="./sonidos/mimir.mp4">ronquidos</button>
             <button class="btn" data-sound="./sonidos/pedo.mp4">pedo</button>
-            <button class="btn" data-sound="./sonidos/its_mario.mp4">Mario Bros</button>
+            <div class="mario-btn-wrapper">
+                <img src="sombrero-mario.svg" alt="Sombrero Mario" class="sombrero-mario">
+                <button class="btn" data-sound="./sonidos/its_mario.mp4">Mario Bros</button>
+            </div>
             <button class="btn" data-sound="9">No se tira asi</button>
             <button class="btn" data-sound="10">ese gustito</button>
         </div>
